--- a/JapanGames2/JapanGames2/JapanGames2.csproj
+++ b/JapanGames2/JapanGames2/JapanGames2.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+    <UserSecretsId>20e5fc06-c965-4ca7-bd01-b4584069650a</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
