--- a/JapanGames2/JapanGames2/JapanGames2.csproj
+++ b/JapanGames2/JapanGames2/JapanGames2.csproj
@@ -31,6 +31,11 @@
     <Compile Update="PageSudoku.xaml.cs">
       <DependentUpon>PageSudoku.xaml</DependentUpon>
     </Compile>
+    <Compile Update="ResourceLang.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ResourceLang.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -39,6 +44,13 @@
     </EmbeddedResource>
     <EmbeddedResource Update="PageMenuMain.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="ResourceLang.ru.resx">
+      <Generator></Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="ResourceLang.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ResourceLang.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
