--- a/JapanGames2/JapanGames2/JapanGames2.csproj
+++ b/JapanGames2/JapanGames2/JapanGames2.csproj
@@ -31,7 +31,7 @@
     <Compile Update="PageSudoku.xaml.cs">
       <DependentUpon>PageSudoku.xaml</DependentUpon>
     </Compile>
-    <Compile Update="ResourceLang.Designer.cs">
+    <Compile Update="Localization\ResourceLang.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>ResourceLang.resx</DependentUpon>
@@ -45,10 +45,10 @@
     <EmbeddedResource Update="PageMenuMain.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="ResourceLang.ru.resx">
+    <EmbeddedResource Update="Localization\ResourceLang.ru.resx">
       <Generator></Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="ResourceLang.resx">
+    <EmbeddedResource Update="Localization\ResourceLang.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ResourceLang.Designer.cs</LastGenOutput>
     </EmbeddedResource>
