--- a/JapanGames2/JapanGames2.Android/JapanGames2.Android.csproj
+++ b/JapanGames2/JapanGames2.Android/JapanGames2.Android.csproj
@@ -64,6 +64,8 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AditionalDependencies\DeviceInfoHandler.cs" />
+    <Compile Include="AditionalDependencies\LocalizationDetector.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
